5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4152/executions/1674_1100.log
== TEST (2019-04-25 11:24:10) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
ced = input("digite o valor da cedula: ")
a = "Tartaruga"
b = "Garca"
c = "Arara"
d = "Mico-leao-dourado"
e = "Onca-pintada"
f = "Garoupa"
if ((ced == 2) or (ced == 5) or (ced == 10) or (ced == 20) or (ced == 50) or (ced == 100)):
	if (ced == "2"):
		print("Entrada:", "2")
		print("Animal:", a)
	elif (ced == "5"):
		print("Entrada:", "5")
		print("Animal:", b)
	elif (ced == "10"):
		print("Entrada:", "10")
		print("Animal:", c)
	elif (ced == "20"):
		print("Entrada:", "20")
		print("Animal:", d)
	elif (ced == "50"):
		print("Entrada:", "50")
		print("Animal:", e)
	else (ced == "100"):
		print("Entrada:", "100")
		print("Animal", f)
else:
	print("Entrada:", ced)
	print("Animal:", "Invalido")
		
-- ERROR:
File "XXXX", line 27
    else (ced == "100"):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:26:30) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
ced = int(input("digite o valor da cedula: "))
a = "Tartaruga"
b = "Garca"
c = "Arara"
d = "Mico-leao-dourado"
e = "Onca-pintada"
f = "Garoupa"
if ((ced == 2) or (ced == 5) or (ced == 10) or (ced == 20) or (ced == 50) or (ced == 100)):
	if (ced == 2):
		print("Entrada:", ced)
		print("Animal:", a)
	elif (ced == 5):
		print("Entrada:", ced)
		print("Animal:", b)
	elif (ced == 10):
		print("Entrada:", ced)
		print("Animal:", c)
	elif (ced == 20):
		print("Entrada:", ced)
		print("Animal:", d)
	elif (ced == 50):
		print("Entrada:", ced)
		print("Animal:", e)
	else (ced == 100):
		print("Entrada:", ced)
		print("Animal", f)
else:
	print("Entrada:", ced)
	print("Animal:", "Invalido")
		
-- ERROR:
File "XXXX", line 27
    else (ced == 100):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:26:41) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
ced = int(input("digite o valor da cedula: "))
a = "Tartaruga"
b = "Garca"
c = "Arara"
d = "Mico-leao-dourado"
e = "Onca-pintada"
f = "Garoupa"
if ((ced == 2) or (ced == 5) or (ced == 10) or (ced == 20) or (ced == 50) or (ced == 100)):
	if (ced == 2):
		print("Entrada:", ced)
		print("Animal:", a)
	elif (ced == 5):
		print("Entrada:", ced)
		print("Animal:", b)
	elif (ced == 10):
		print("Entrada:", ced)
		print("Animal:", c)
	elif (ced == 20):
		print("Entrada:", ced)
		print("Animal:", d)
	elif (ced == 50):
		print("Entrada:", ced)
		print("Animal:", e)
	elif (ced == 100):
		print("Entrada:", ced)
		print("Animal", f)
else:
	print("Entrada:", ced)
	print("Animal:", "Invalido")
		
-- OUTPUT:
Entrada: 100
Animal Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:26:59) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
ced = int(input("digite o valor da cedula: "))
a = "Tartaruga"
b = "Garca"
c = "Arara"
d = "Mico-leao-dourado"
e = "Onca-pintada"
f = "Garoupa"
if ((ced == 2) or (ced == 5) or (ced == 10) or (ced == 20) or (ced == 50) or (ced == 100)):
	if (ced == 2):
		print("Entrada:", ced)
		print("Animal:", a)
	elif (ced == 5):
		print("Entrada:", ced)
		print("Animal:", b)
	elif (ced == 10):
		print("Entrada:", ced)
		print("Animal:", c)
	elif (ced == 20):
		print("Entrada:", ced)
		print("Animal:", d)
	elif (ced == 50):
		print("Entrada:", ced)
		print("Animal:", e)
	elif (ced == 100):
		print("Entrada:", ced)
		print("Animal", f)
else:
	print("Entrada:", ced)
	print("Animal:", "Invalido")
		
-- EXECUTION TIME:
0.228786
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:28:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
ced = int(input("digite o valor da cedula: "))
a = "Tartaruga"
b = "Garca"
c = "Arara"
d = "Mico-leao-dourado"
e = "Onca-pintada"
f = "Garoupa"
if ((ced == 2) or (ced == 5) or (ced == 10) or (ced == 20) or (ced == 50) or (ced == 100)):
	if (ced == 2):
		print("Entrada:", ced)
		print("Animal:", a)
	elif (ced == 5):
		print("Entrada:", ced)
		print("Animal:", b)
	elif (ced == 10):
		print("Entrada:", ced)
		print("Animal:", c)
	elif (ced == 20):
		print("Entrada:", ced)
		print("Animal:", d)
	elif (ced == 50):
		print("Entrada:", ced)
		print("Animal:", e)
	elif (ced == 100):
		print("Entrada:", ced)
		print("Animal", f)
   else:
	   print("Entrada:", ced)
	   print("Animal:", "Invalido")
		
-- ERROR:
File "XXXX", line 30
    else:
        ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:28:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
ced = int(input("digite o valor da cedula: "))
a = "Tartaruga"
b = "Garca"
c = "Arara"
d = "Mico-leao-dourado"
e = "Onca-pintada"
f = "Garoupa"
if ((ced == 2) or (ced == 5) or (ced == 10) or (ced == 20) or (ced == 50) or (ced == 100)):
	if (ced == 2):
		print("Entrada:", ced)
		print("Animal:", a)
	elif (ced == 5):
		print("Entrada:", ced)
		print("Animal:", b)
	elif (ced == 10):
		print("Entrada:", ced)
		print("Animal:", c)
	elif (ced == 20):
		print("Entrada:", ced)
		print("Animal:", d)
	elif (ced == 50):
		print("Entrada:", ced)
		print("Animal:", e)
	if (ced == 100):
		print("Entrada:", ced)
		print("Animal", f)
else:
	print("Entrada:", ced)
	print("Animal:", "Invalido")
		
-- OUTPUT:
Entrada: 100
Animal Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:28:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
ced = int(input("digite o valor da cedula: "))
a = "Tartaruga"
b = "Garca"
c = "Arara"
d = "Mico-leao-dourado"
e = "Onca-pintada"
f = "Garoupa"
if ((ced == 2) or (ced == 5) or (ced == 10) or (ced == 20) or (ced == 50) or (ced == 100)):
	if (ced == 2):
		print("Entrada:", ced)
		print("Animal:", a)
	elif (ced == 5):
		print("Entrada:", ced)
		print("Animal:", b)
	elif (ced == 10):
		print("Entrada:", ced)
		print("Animal:", c)
	elif (ced == 20):
		print("Entrada:", ced)
		print("Animal:", d)
	elif (ced == 50):
		print("Entrada:", ced)
		print("Animal:", e)
	if (ced == 100):
		print("Entrada:", ced)
		print("Animal", f)
else:
	print("Entrada:", ced)
	print("Animal:", "Invalido")
		
-- EXECUTION TIME:
0.221788
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:29:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
ced = int(input("digite o valor da cedula: "))
a = "Tartaruga"
b = "Garca"
c = "Arara"
d = "Mico-leao-dourado"
e = "Onca-pintada"
f = "Garoupa"
if ((ced == 2) or (ced == 5) or (ced == 10) or (ced == 20) or (ced == 50) or (ced == 100)):
	if (ced == 2):
		print("Entrada:", ced)
		print("Animal:", a)
	elif (ced == 5):
		print("Entrada:", ced)
		print("Animal:", b)
	elif (ced == 10):
		print("Entrada:", ced)
		print("Animal:", c)
	elif (ced == 20):
		print("Entrada:", ced)
		print("Animal:", d)
	elif (ced == 50):
		print("Entrada:", ced)
		print("Animal:", e)
	else (ced == 100):
		print("Entrada:", ced)
		print("Animal", f)
else:
	print("Entrada:", ced)
	print("Animal:", "Invalido")
		
-- ERROR:
File "XXXX", line 27
    else (ced == 100):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:31:02) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
ced = int(input("digite o valor da cedula: "))
a = "Tartaruga"
b = "Garca"
c = "Arara"
d = "Mico-leao-dourado"
e = "Onca-pintada"
f = "Garoupa"
if ((ced == 2) or (ced == 5) or (ced == 10) or (ced == 20) or (ced == 50) or (ced == 100)):
	if (ced == 2):
		print("Entrada:", ced)
		print("Animal:", a)
	elif (ced == 5):
		print("Entrada:", ced)
		print("Animal:", b)
	elif (ced == 10):
		print("Entrada:", ced)
		print("Animal:", c)
	elif (ced == 20):
		print("Entrada:", ced)
		print("Animal:", d)
	elif (ced == 50):
		print("Entrada:", ced)
		print("Animal:", e)
	else (ced == 100):
		print("Entrada:", ced)
		print("Animal", f)
else:
	print("Entrada:", ced)
	print("Animal:", "Invalido")
		
-- ERROR:
File "XXXX", line 27
    else (ced == 100):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:32:22) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
ced = int(input("digite o valor da cedula: "))
a = "Tartaruga"
b = "Garca"
c = "Arara"
d = "Mico-leao-dourado"
e = "Onca-pintada"
f = "Garoupa"
if ((ced == 2) or (ced == 5) or (ced == 10) or (ced == 20) or (ced == 50) or (ced == 100)):
	if (ced == 2):
		print("Entrada:", ced)
		print("Animal:", a)
	elif (ced == 5):
		print("Entrada:", ced)
		print("Animal:", b)
	elif (ced == 10):
		print("Entrada:", ced)
		print("Animal:", c)
	elif (ced == 20):
		print("Entrada:", ced)
		print("Animal:", d)
	elif (ced == 50):
		print("Entrada:", ced)
		print("Animal:", e)
	else:
		print("Entrada:", ced)
		print("Animal", f)
else:
	print("Entrada:", ced)
	print("Animal:", "Invalido")
		
-- OUTPUT:
Entrada: 100
Animal Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:32:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
ced = int(input("digite o valor da cedula: "))
a = "Tartaruga"
b = "Garca"
c = "Arara"
d = "Mico-leao-dourado"
e = "Onca-pintada"
f = "Garoupa"
if ((ced == 2) or (ced == 5) or (ced == 10) or (ced == 20) or (ced == 50) or (ced == 100)):
	if (ced == 2):
		print("Entrada:", ced)
		print("Animal:", a)
	elif (ced == 5):
		print("Entrada:", ced)
		print("Animal:", b)
	elif (ced == 10):
		print("Entrada:", ced)
		print("Animal:", c)
	elif (ced == 20):
		print("Entrada:", ced)
		print("Animal:", d)
	elif (ced == 50):
		print("Entrada:", ced)
		print("Animal:", e)
	else:
		print("Entrada:", ced)
		print("Animal", f)
else:
	print("Entrada:", ced)
	print("Animal:", "Invalido")
		
-- OUTPUT:
Entrada: 100
Animal Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:32:42) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
ced = int(input("digite o valor da cedula: "))
a = "Tartaruga"
b = "Garca"
c = "Arara"
d = "Mico-leao-dourado"
e = "Onca-pintada"
f = "Garoupa"
if ((ced == 2) or (ced == 5) or (ced == 10) or (ced == 20) or (ced == 50) or (ced == 100)):
	if (ced == 2):
		print("Entrada:", ced)
		print("Animal:", a)
	elif (ced == 5):
		print("Entrada:", ced)
		print("Animal:", b)
	elif (ced == 10):
		print("Entrada:", ced)
		print("Animal:", c)
	elif (ced == 20):
		print("Entrada:", ced)
		print("Animal:", d)
	elif (ced == 50):
		print("Entrada:", ced)
		print("Animal:", e)
	else:
		print("Entrada:", ced)
		print("Animal", f)
else:
	print("Entrada:", ced)
	print("Animal:", "Invalido")
		
-- OUTPUT:
Entrada: 100
Animal Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:32:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
ced = int(input("digite o valor da cedula: "))
a = "Tartaruga"
b = "Garca"
c = "Arara"
d = "Mico-leao-dourado"
e = "Onca-pintada"
f = "Garoupa"
if ((ced == 2) or (ced == 5) or (ced == 10) or (ced == 20) or (ced == 50) or (ced == 100)):
	if (ced == 2):
		print("Entrada:", ced)
		print("Animal:", a)
	elif (ced == 5):
		print("Entrada:", ced)
		print("Animal:", b)
	elif (ced == 10):
		print("Entrada:", ced)
		print("Animal:", c)
	elif (ced == 20):
		print("Entrada:", ced)
		print("Animal:", d)
	elif (ced == 50):
		print("Entrada:", ced)
		print("Animal:", e)
	else:
		print("Entrada:", ced)
		print("Animal", f)
else:
	print("Entrada:", ced)
	print("Animal:", "Invalido")
		
-- OUTPUT:
Entrada: 100
Animal Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:32:55) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
ced = int(input("digite o valor da cedula: "))
a = "Tartaruga"
b = "Garca"
c = "Arara"
d = "Mico-leao-dourado"
e = "Onca-pintada"
f = "Garoupa"
if ((ced == 2) or (ced == 5) or (ced == 10) or (ced == 20) or (ced == 50) or (ced == 100)):
	if (ced == 2):
		print("Entrada:", ced)
		print("Animal:", a)
	elif (ced == 5):
		print("Entrada:", ced)
		print("Animal:", b)
	elif (ced == 10):
		print("Entrada:", ced)
		print("Animal:", c)
	elif (ced == 20):
		print("Entrada:", ced)
		print("Animal:", d)
	elif (ced == 50):
		print("Entrada:", ced)
		print("Animal:", e)
	else:
		print("Entrada:", ced)
		print("Animal", f)
else:
	print("Entrada:", ced)
	print("Animal:", "Invalido")
		
-- OUTPUT:
Entrada: 100
Animal Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:33:03) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
ced = int(input("digite o valor da cedula: "))
a = "Tartaruga"
b = "Garca"
c = "Arara"
d = "Mico-leao-dourado"
e = "Onca-pintada"
f = "Garoupa"
if ((ced == 2) or (ced == 5) or (ced == 10) or (ced == 20) or (ced == 50) or (ced == 100)):
	if (ced == 2):
		print("Entrada:", ced)
		print("Animal:", a)
	elif (ced == 5):
		print("Entrada:", ced)
		print("Animal:", b)
	elif (ced == 10):
		print("Entrada:", ced)
		print("Animal:", c)
	elif (ced == 20):
		print("Entrada:", ced)
		print("Animal:", d)
	elif (ced == 50):
		print("Entrada:", ced)
		print("Animal:", e)
	else:
		print("Entrada:", ced)
		print("Animal", f)
else:
	print("Entrada:", ced)
	print("Animal:", "Invalido")
		
-- EXECUTION TIME:
0.187183
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:33:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
ced = int(input("digite o valor da cedula: "))
a = "Tartaruga"
b = "Garca"
c = "Arara"
d = "Mico-leao-dourado"
e = "Onca-pintada"
f = "Garoupa"
if ((ced == 2) or (ced == 5) or (ced == 10) or (ced == 20) or (ced == 50) or (ced == 100)):
	if (ced == 2):
		print("Entrada:", ced)
		print("Animal:", a)
	elif (ced == 5):
		print("Entrada:", ced)
		print("Animal:", b)
	elif (ced == 10):
		print("Entrada:", ced)
		print("Animal:", c)
	elif (ced == 20):
		print("Entrada:", ced)
		print("Animal:", d)
	elif (ced == 50):
		print("Entrada:", ced)
		print("Animal:", e)
	else:
		print("Entrada:", ced)
		print("Animal", f)
else:
	print("Entrada:", ced)
	print("Animal:", "Invalido")
		
-- OUTPUT:
Entrada: 100
Animal Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:34:42) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
ced = int(input("digite o valor da cedula: "))
a = "Tartaruga"
b = "Garca"
c = "Arara"
d = "Mico-leao-dourado"
e = "Onca-pintada"
f = "Garoupa"
if ((ced == 2) or (ced == 5) or (ced == 10) or (ced == 20) or (ced == 50) or (ced == 100)):
	if (ced == 2):
		print("Entrada:", ced)
		print("Animal:", a)
	elif (ced == 5):
		print("Entrada:", ced)
		print("Animal:", b)
	elif (ced == 10):
		print("Entrada:", ced)
		print("Animal:", c)
	elif (ced == 20):
		print("Entrada:", ced)
		print("Animal:", d)
	elif (ced == 50):
		print("Entrada:", ced)
		print("Animal:", e)
	else:
		print("Entrada:", ced)
		print("Animal", f)
else:
	print("Entrada:", ced)
	print("Animal:", "Invalido")
		
-- OUTPUT:
Entrada: 100
Animal Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:35:05) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
ced = int(input("digite o valor da cedula: "))
a = "Tartaruga"
b = "Garca"
c = "Arara"
d = "Mico-leao-dourado"
e = "Onca-pintada"
f = "Garoupa"
if ((ced == 2) or (ced == 5) or (ced == 10) or (ced == 20) or (ced == 50) or (ced == 100)):
	if (ced == 2):
		print("Entrada:", ced)
		print("Animal:", a)
	elif (ced == 5):
		print("Entrada:", ced)
		print("Animal:", b)
	elif (ced == 10):
		print("Entrada:", ced)
		print("Animal:", c)
	elif (ced == 20):
		print("Entrada:", ced)
		print("Animal:", d)
	elif (ced == 50):
		print("Entrada:", ced)
		print("Animal:", e)
	else:
		print("Entrada:", ced)
		print("Animal", f)
else:
	print("Entrada:", ced)
	print("Animal:", "Invalido")
		
-- EXECUTION TIME:
0.168236
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:37:06) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
ced = int(input("digite o valor da cedula: "))
a = "Tartaruga"
b = "Garca"
c = "Arara"
d = "Mico-leao-dourado"
e = "Onca-pintada"
f = "Garoupa"
if ((ced == 2) or (ced == 5) or (ced == 10) or (ced == 20) or (ced == 50) or (ced == 100)):
	if (ced == 2):
		print("Entrada:", ced)
		print("Animal:", a)
	elif (ced == 5):
		print("Entrada:", ced)
		print("Animal:", b)
	elif (ced == 10):
		print("Entrada:", ced)
		print("Animal:", c)
	elif (ced == 20):
		print("Entrada:", ced)
		print("Animal:", d)
	elif (ced == 50):
		print("Entrada:", ced)
		print("Animal:", e)
	elif (ced == 100)
		print("Entrada:", ced)
		print("Animal", f)
	else:
		print("Entrada:", ced)
		print("Animal:", "Invalido")
else:
	print("Entrada:", ced)
	print("Animal:", "Invalido")
		
-- ERROR:
File "XXXX", line 27
    elif (ced == 100)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:38:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
ced = int(input("digite o valor da cedula: "))
a = "Tartaruga"
b = "Garca"
c = "Arara"
d = "Mico-leao-dourado"
e = "Onca-pintada"
f = "Garoupa"
if ((ced == 2) or (ced == 5) or (ced == 10) or (ced == 20) or (ced == 50) or (ced == 100)):
	if (ced == 2):
		print("Entrada:", ced)
		print("Animal:", a)
	elif (ced == 5):
		print("Entrada:", ced)
		print("Animal:", b)
	elif (ced == 10):
		print("Entrada:", ced)
		print("Animal:", c)
	elif (ced == 20):
		print("Entrada:", ced)
		print("Animal:", d)
	elif (ced == 50):
		print("Entrada:", ced)
		print("Animal:", e)
	else:
		print("Entrada:", ced)
		print("Animal", f)
else:
	print("Entrada:", ced)
	print("Animal:", "Invalido")
		
-- OUTPUT:
Entrada: 100
Animal Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:39:06) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
ced = int(input("digite o valor da cedula: "))
a = "Tartaruga"
b = "Garca"
c = "Arara"
d = "Mico-leao-dourado"
e = "Onca-pintada"
f = "Garoupa"
if ((ced == 2) or (ced == 5) or (ced == 10) or (ced == 20) or (ced == 50) or (ced == 100)):
	if (ced == 2):
		print("Entrada:", ced)
		print("Animal:", a)
	elif (ced == 5):
		print("Entrada:", ced)
		print("Animal:", b)
	elif (ced == 10):
		print("Entrada:", ced)
		print("Animal:", c)
	elif (ced == 20):
		print("Entrada:", ced)
		print("Animal:", d)
	elif (ced == 50):
		print("Entrada:", ced)
		print("Animal:", e)
	else:
		print("Entrada:", ced)
		print("Animal", f)
else:
	print("Entrada:", ced)
	print("Animal:", "Invalido")
		
-- OUTPUT:
Entrada: 100
Animal Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:39:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
ced = int(input("digite o valor da cedula: "))
a = "Tartaruga"
b = "Garca"
c = "Arara"
d = "Mico-leao-dourado"
e = "Onca-pintada"
f = "Garoupa"
if ((ced == 2) or (ced == 5) or (ced == 10) or (ced == 20) or (ced == 50) or (ced == 100)):
	if (ced == 2):
		print("Entrada:", ced)
		print("Animal:", a)
	elif (ced == 5):
		print("Entrada:", ced)
		print("Animal:", b)
	elif (ced == 10):
		print("Entrada:", ced)
		print("Animal:", c)
	elif (ced == 20):
		print("Entrada:", ced)
		print("Animal:", d)
	elif (ced == 50):
		print("Entrada:", ced)
		print("Animal:", e)
	else:
		print("Entrada:", ced)
		print("Animal", f)
else:
	print("Entrada:", ced)
	print("Animal:", "Invalido")
		
-- OUTPUT:
Entrada: 100
Animal Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:39:28) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
ced = int(input("digite o valor da cedula: "))
a = "Tartaruga"
b = "Garca"
c = "Arara"
d = "Mico-leao-dourado"
e = "Onca-pintada"
f = "Garoupa"
if ((ced == 2) or (ced == 5) or (ced == 10) or (ced == 20) or (ced == 50) or (ced == 100)):
	if (ced == 2):
		print("Entrada:", ced)
		print("Animal:", a)
	elif (ced == 5):
		print("Entrada:", ced)
		print("Animal:", b)
	elif (ced == 10):
		print("Entrada:", ced)
		print("Animal:", c)
	elif (ced == 20):
		print("Entrada:", ced)
		print("Animal:", d)
	elif (ced == 50):
		print("Entrada:", ced)
		print("Animal:", e)
	else:
		print("Entrada:", ced)
		print("Animal:", f)
else:
	print("Entrada:", ced)
	print("Animal:", "Invalido")
		
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:39:34) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
ced = int(input("digite o valor da cedula: "))
a = "Tartaruga"
b = "Garca"
c = "Arara"
d = "Mico-leao-dourado"
e = "Onca-pintada"
f = "Garoupa"
if ((ced == 2) or (ced == 5) or (ced == 10) or (ced == 20) or (ced == 50) or (ced == 100)):
	if (ced == 2):
		print("Entrada:", ced)
		print("Animal:", a)
	elif (ced == 5):
		print("Entrada:", ced)
		print("Animal:", b)
	elif (ced == 10):
		print("Entrada:", ced)
		print("Animal:", c)
	elif (ced == 20):
		print("Entrada:", ced)
		print("Animal:", d)
	elif (ced == 50):
		print("Entrada:", ced)
		print("Animal:", e)
	else:
		print("Entrada:", ced)
		print("Animal:", f)
else:
	print("Entrada:", ced)
	print("Animal:", "Invalido")
		
-- EXECUTION TIME:
0.13779
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
